fix image clipping

--- a/style.css
+++ b/style.css
@@ -242,13 +242,14 @@ section {
     }
 }
 
-@media (max-width: 520px) {
+@media (max-width: 620px) {
     .home {
         flex-direction: column;
         align-items: flex-start;
 	margin-top: 10rem;
     }
     .right__img {
+	order: -1;
         margin: 2rem auto 0;
         width: clamp(220px, 60vw, 320px);
         min-width: 220px;
